some fix in swagger-ui-theme (dark mode)

--- a/MCMS/wwwroot/api/docs/swagger-ui-theme.css
+++ b/MCMS/wwwroot/api/docs/swagger-ui-theme.css
@@ -208,3 +208,7 @@ body.dark, body.dark .swagger-ui .modal-ux {
 .dark .swagger-ui .parameters-col_description input {
     color: #3b4151;
 }
+
+.dark .swagger-ui .opblock-summary-control .arrow {
+    fill: white;
+}
